Makefile modified, pass linux for compiling for linux

--- a/pktSniffSvr/makefile
+++ b/pktSniffSvr/makefile
@@ -1,16 +1,22 @@
 # ultra simple
 CC=gcc
 CFLAGS=-c -Wall
+# lpcap for BSD, libpcap-dev for Linux
 CLIBS=-lpcap
+CLINUXLIBS=
 LDFLAGS=
 SOURCES=svr.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=pktsniffer
 
+linux: $(SOURCES) $(EXECUTABLE)
+	CLINUXLIBS=-llibpcap-dev
+
+
 all: $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS)
-	$(CC) $(LDFLAGS) $(CLIBS) $(OBJECTS) -o $@
+	$(CC) $(LDFLAGS) $(CLIBS) $(CLINUXLIBS) $(OBJECTS) -o $@
 
 .c.o:
 	$(CC) $(CFLAGS) $< -o $@
