Fixed linker in Makefile, moved to end and changed name to lpcap

--- a/pktSniffSvr/makefile
+++ b/pktSniffSvr/makefile
@@ -3,7 +3,7 @@ CC=gcc
 CFLAGS=-c -Wall
 # lpcap for BSD, libpcap-dev for Linux
 CLIBS=-lpcap
-CLINLIBS=-llibpcap-dev
+CLINLIBS=-lpcap
 LDFLAGS=
 SOURCES=svr.c
 OBJECTS=$(SOURCES:.c=.o)
@@ -13,7 +13,7 @@ all: $(SOURCES) $(EXECUTABLE)
 
 
 linux: $(SOURCES) $(OBJECTS)
-	$(CC) $(LDFLAGS) $(CLINLIBS) $(OBJECTS) -o $@
+	$(CC) $(LDFLAGS) $(OBJECTS) -o $@ $(CLINLIBS)
 
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $(CLIBS) $(OBJECTS) -o $@
